--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
         <section id="main">
           <ul id="todo-list">
             {{#each todo in model itemController="todo"}}
-              <li {{bind-attr class="todo.isCompleted:completed"}}>
-                {{input type="checkbox" checked=todo.isCompleted class="toggle"}}
-                <label>{{todo.title}}</label><button class="destroy"></button>
+              <li {{bind-attr class="todo.isCompleted:completed todo.isEditing:editing"}}>
+                {{#if isEditing}}
+                  {{edit-todo class="edit" value=todo.title focus-out="acceptChanges"
+                                           insert-newline="acceptChanges"}}
+                {{else}}
+                  {{input type="checkbox" checked=todo.isCompleted class="toggle"}}
+                  <label {{action "editTodo" on="doubleClick"}}>{{todo.title}}</label><button class="destroy"></button>
+                {{/if}}
               </li>
             {{/each}}
           </ul>
@@ -34,7 +39,7 @@
 
         <footer id="footer">
           <span id="todo-count">
-            <strong>2</strong> todos left
+            <strong>{{remaining}}</strong> {{inflection}} left
           </span>
           <ul id="filters">
             <li>
@@ -67,5 +72,6 @@
     <script src="js/models/todo.js"></script>
     <script src="js/controllers/todos_controller.js"></script>
     <script src="js/controllers/todo_controller.js"></script>
+    <script src="js/views/edit_todo_view.js"></script>
   </body>
 </html>
