fixed bug from ember guides

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <body>
     <script type="text/x-handlebars" data-template-name="todos">
       <section id="todoapp">
-        {{! ... additional lines truncated for brevity ... }}
         <header id="header">
           <h1>todos</h1>
           {{input
@@ -21,14 +20,14 @@
 
         <section id="main">
           <ul id="todo-list">
-            {{#each todo in model itemController="todo"}}
-              <li {{bind-attr class="todo.isCompleted:completed todo.isEditing:editing"}}>
+            {{#each itemController="todo"}}
+              <li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
                 {{#if isEditing}}
-                  {{edit-todo class="edit" value=todo.title focus-out="acceptChanges"
+                  {{edit-todo class="edit" value=title focus-out="acceptChanges"
                                            insert-newline="acceptChanges"}}
                 {{else}}
-                  {{input type="checkbox" checked=todo.isCompleted class="toggle"}}
-                  <label {{action "editTodo" on="doubleClick"}}>{{todo.title}}</label><button class="destroy"></button>
+                  {{input type="checkbox" checked=isCompleted class="toggle"}}
+                  <label {{action "editTodo" on="doubleClick"}}>{{title}}</label><button class="destroy"></button>
                 {{/if}}
               </li>
             {{/each}}
